--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html>
 <head>
   <meta charset="utf8"/>
-  <title>A Spatialised Prisoner's Dilemma | Dave Kinkead</title>
+  <title>The Zombie Apocalypse | Dave Kinkead</title>
   <link rel="stylesheet" type="text/css" media="all" href="assets/styles.css"/>
   <link href='http://fonts.googleapis.com/css?family=Lato:400,900' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <div id="info">
-	  <h1>Spatialised Prisoner's Dilemma</h1>
-	  <p>An agent based simulation of an evolutionary spatialised prisoner's dilemma. Agents adapt the best performing strategy from their neighbourhood each round.</p>
+    <h1>The Zombie Apocalypse</h1>
+    <p>Can game theory help us fight the zombie apocalypse?</p>
   </div>
   <div id="space">
   </div>
   <footer>
-  	Simulation by <a href="http://dave.kinkead.com.au">Dave Kinkead</a>
+    Simulation by <a href="http://dave.kinkead.com.au">Dave Kinkead</a>
   </footer>
 
   <a href="https://github.com/davekinkead/spatialised-prisoners-dilemma"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
